# mml

./: .gitignore  .gitmodules  Cargo.toml  README.MD  build.rs
examples/: linear.rs  mnist.rs
run/: mtl.sh
src/: data.rs  eval.rs  graph.rs  lib.rs  main.rs  optim.rs  tmap.rs
src/eval/: cpu.rs  mod.rs  mps.rs
src/eval/mps/: mod.rs  mps.metal
src/graph/: gopt.rs  mod.rs
src/optim/: adam.rs  mod.rs  sgd.rs
