[package]
name = "mml"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[features]
default = ["mps"]
mps = ["metal", "metal/mps", "objc"]

[dependencies]
urlencoding = "2.1.3"
smallvec = "2.0.0-alpha.5"

open = "5.1.2"
rand = "0.8.5"
log = "0.4.21"

cblas = { version = "0.4.0" }
metal = { path = "dep/metal-rs", optional = true }
objc = { version = "0.2.7", optional = true }