[package]
name = "mml"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
debug = true

[features]
default = ["mps"]
mps = ["metal", "metal/mps", "objc"]

[dev-dependencies]
mnist = { version = "0.6.0", features = ["download"] }
quickcheck = "1.0.3"

[dependencies]
urlencoding = "2.1.3"
smallvec = "2.0.0-alpha.5"
slotmap = "1.0.7"
rayon = "1.10.0"

open = "5.1.2"
rand = "0.8.5   "
log = "0.4.21"

cblas = { version = "0.4.0" }
metal = { version = "0.28.0", optional = true }
objc = { version = "0.2.7", optional = true }